--- a/src/components/posts-widget/posts-widget.css
+++ b/src/components/posts-widget/posts-widget.css
@@ -3,11 +3,20 @@
 .posts-widget {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   @media (--large-up) {
     box-sizing: border-box;
     float: left;
     width: 50%;
+
+    &:nth-child(even) {
+      align-items: flex-end;
+    }
+
+    &:nth-child(odd) {
+      align-items: flex-start;
+    }
   }
 
   @media (--xl-up) {
@@ -23,10 +32,6 @@
     @media (--large-up) {
       padding-bottom: var(--space-one-half-vw);
     }
-  }
-
-  &:nth-child(even) {
-    align-items: flex-end;
   }
 
   h2 {
