--- a/src/components/_fonts.css
+++ b/src/components/_fonts.css
@@ -34,7 +34,8 @@
 @import url("//hello.myfonts.net/count/319cc5");
 
 @font-face {
-  font-family: 'ProximaNova-Bold';
+  font-weight: 700;
+  font-family: 'Proxima Nova';
   src: url('/fonts/proxima-nova/319CC5_5_0.eot');
   src: url('/fonts/proxima-nova/319CC5_5_0.eot?#iefix') format('embedded-opentype'),
   url('/fonts/proxima-nova/319CC5_5_0.woff2') format('woff2'),
@@ -43,7 +44,8 @@
 }
 
 @font-face {
-  font-family: 'ProximaNova-Extrabld';
+  font-weight: 800;
+  font-family: 'Proxima Nova';
   src: url('/fonts/proxima-nova/319CC5_8_0.eot');
   src: url('/fonts/proxima-nova/319CC5_8_0.eot?#iefix') format('embedded-opentype'),
   url('/fonts/proxima-nova/319CC5_8_0.woff2') format('woff2'),
@@ -52,7 +54,8 @@
 }
 
 @font-face {
-  font-family: 'ProximaNova-Light';
+  font-weight: 300;
+  font-family: 'Proxima Nova';
   src: url('/fonts/proxima-nova/319CC5_B_0.eot');
   src: url('/fonts/proxima-nova/319CC5_B_0.eot?#iefix') format('embedded-opentype'),
   url('/fonts/proxima-nova/319CC5_B_0.woff2') format('woff2'),
@@ -61,7 +64,7 @@
 }
 
 @font-face {
-  font-family: 'ProximaNova-Regular';
+  font-family: 'Proxima Nova';
   src: url('/fonts/proxima-nova/319CC5_11_0.eot');
   src: url('/fonts/proxima-nova/319CC5_11_0.eot?#iefix') format('embedded-opentype'),
   url('/fonts/proxima-nova/319CC5_11_0.woff2') format('woff2'),
@@ -70,7 +73,8 @@
 }
 
 @font-face {
-  font-family: 'ProximaNova-Semibold';
+  font-weight: 600;
+  font-family: 'Proxima Nova';
   src: url('/fonts/proxima-nova/319CC5_14_0.eot');
   src: url('/fonts/proxima-nova/319CC5_14_0.eot?#iefix') format('embedded-opentype'),
   url('/fonts/proxima-nova/319CC5_14_0.woff2') format('woff2'),
