--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -52,6 +52,10 @@ p {
   color: var(--color-gray);
 }
 
+a {
+  color: var(--color-pink);
+}
+
 /* Utility Classes */
 .align-center {
   text-align: center;
