--- a/src/components/posts-list/posts-list.css
+++ b/src/components/posts-list/posts-list.css
@@ -1,29 +1,6 @@
 @import '../variables';
 
 .posts-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  @media (--large-up) {
-    box-sizing: border-box;
-    float: left;
-    width: 50%;
-
-    &:nth-child(even) {
-      align-items: flex-end;
-    }
-
-    &:nth-child(odd) {
-      align-items: flex-start;
-    }
-  }
-
-  @media (--xl-up) {
-    padding-right: var(--space-half-vw);
-    padding-left: var(--space-half-vw);
-  }
-
   &:not(:last-child) {
     @media (--medium-up) {
       padding-bottom: 0;
@@ -39,7 +16,6 @@
   }
 
   & > * {
-    max-width: 33.75rem;
     width: 100%;
   }
 }
@@ -58,13 +34,13 @@
 }
 
 .posts-list-entry {
-  margin-bottom: var(--space-single);
+  margin-bottom: calc(var(--space-double) * 2);
 }
 
 .posts-list-title {
   color: var(--color-dark-blue);
   font-family: var(--font-serif);
-  font-size: var(--size-medium);
+  font-size: var(--size-large);
   margin-bottom: var(--space-half);
 }
 
