--- a/src/components/episodes-list/episodes-list.css
+++ b/src/components/episodes-list/episodes-list.css
@@ -47,14 +47,14 @@
 }
 
 .episodes-list-title {
-  color: var(--color-dark-blue);
+  color: var(--link-color);
   font-family: var(--font-sans-serif);
   font-size: var(--size-medium);
   margin-bottom: var(--space-half);
 }
 
 .episodes-list-meta {
-  color: var(--color-light-gray);
+  color: var(--body-color-faded);
   font-family: var(--font-serif);
   font-size: var(--size-small);
   line-height: 1.5;
@@ -62,7 +62,7 @@
 }
 
 .episodes-list-authors a {
-  color: var(--color-light-blue);
+  color: var(--body-color-faded);
 
   &:not(:last-child)::after {
     content: ", ";
