--- a/src/components/posts-widget/posts-widget.css
+++ b/src/components/posts-widget/posts-widget.css
@@ -56,14 +56,14 @@
 }
 
 .posts-widget-title {
-  color: var(--color-dark-blue);
+  color: var(--link-color);
   font-family: var(--font-sans-serif);
   font-size: var(--size-medium);
   margin-bottom: var(--space-half);
 }
 
 .posts-widget-meta {
-  color: var(--color-light-gray);
+  color: var(--body-color-faded);
   font-family: var(--font-serif);
   font-size: var(--size-small);
   line-height: 1.5;
@@ -71,7 +71,7 @@
 }
 
 .posts-widget-authors a {
-  color: var(--color-light-blue);
+  color: var(--body-color-faded);
 
   &:not(:last-child)::after {
     content: ", ";
