--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -19,7 +19,7 @@ $navbar-height: calc($logo-height + ($navbar-padding * 2));
   margin-right: auto;
   height: $logo-height;
 
-  img {
+  svg {
     display: block;
     height: 100%;
   }
@@ -92,7 +92,7 @@ $navbar-height: calc($logo-height + ($navbar-padding * 2));
 
   a {
     text-decoration: none;
-    color: var(--color-light-blue);
+    color: var(--link-color);
     font-weight: 600;
     font-size: var(--size-med-lg);
 
