--- a/src/components/team-list/team-list.css
+++ b/src/components/team-list/team-list.css
@@ -15,6 +15,7 @@
 
   a {
     display: block;
+    text-decoration: none;
   }
 }
 
@@ -29,7 +30,7 @@
 }
 
 .team-img {
-  border: var(--space-half) solid var(--color-light-blue);
+  border: var(--space-half) solid var(--link-color);
   margin-bottom: var(--space-half);
   /* 1:1 aspect ratio */
   padding-top: 100%;
