--- a/src/components/_variables.css
+++ b/src/components/_variables.css
@@ -22,6 +22,7 @@
   --space-one-half: calc(var(--space-single) * 1.5);
   --space-double: calc(var(--space-single) * 2);
   --space-triple: calc(var(--space-single) * 3);
+  --space-quadruple: calc(var(--space-single) * 4);
 
   --space-single-vw: 10vw;
   --space-half-vw: calc(var(--space-single-vw) * 0.5);
