--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -1,8 +1,10 @@
+@import '../components/variables';
+
 .blog-post-byline {
-  margin-bottom: 1em;
+  margin-bottom: var(--space-single);
 }
 
 .blog-post-content ul {
-  margin-left: 2em;
-  margin-bottom: 1.5em;
+  margin-left: var(--space-double);
+  margin-bottom: var(--space-one-half);
 }
