--- a/src/pages/about/index.css
+++ b/src/pages/about/index.css
@@ -27,7 +27,7 @@
   font-style: normal;
   font-weight: 600;
   font-size: var(--size-large);
-  color: var(--color-dark-blue-darkable);
+  color: var(--color-dark-blue);
   display: block;
 }
 
@@ -41,6 +41,18 @@
   justify-content: space-between;
 }
 
+.frontside-separator--text {
+  flex-shrink: 0;
+  margin: 0 var(--space-single);
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
+
+.frontside-separator--text > img {
+  margin: 0 var(--space-single);
+}
+
 .frontside-separator:before, .frontside-separator:after {
   content: '';
   display: block;
@@ -48,12 +60,6 @@
   height: 1px;
   background: #999999;
   flex-shrink: 5;
-}
-
-.frontside-separator--text {
-  text-align: center;
-  flex-shrink: 0;
-  margin: 0 var(--space-single);
 }
 
 .frontside-values {
@@ -64,24 +70,18 @@
 }
 
 .cta-box {
-  background: rgba(var(--rgba-light-blue), 0.10);
+  background: #F3F8FF;
+  display: flex;
+  flex-flow: row nowrap;
   padding: var(--space-double) var(--space-single);
-  @media (--up-small) {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-  }
 }
 
 .cta-box--header {
+  width: 40%;
+  text-align: center;
   font-size: var(--size-xl);
   color: var(--color-light-blue);
-  
-  @media (--up-small) {
-    width: 40%;
-    flex-shrink: 0;
-    text-align: center;
-  }
+  flex-shrink: 0;
 }
 
 .cta-box--header > h2 {
@@ -89,23 +89,16 @@
   font-size: var(--size-large);
   border-bottom: 2px solid var(--color-light-blue);
   margin-right: var(--space-single);
-  margin-top: 0;
 }
 
 .cta-box--header > h2 > a {
   text-decoration: none;
-  color: var(--color-dark-blue-darkable);
+  color: var(--color-dark-blue);
 }
 
 .cta-box--body {
   box-sizing: border-box;
-  @media (--up-small) {
-    padding: 0 var(--space-triple);
-  }
-}
-
-.cta-box--body > p {
-  font-family: var(--font-sans-serif);
+  padding: 0 var(--space-triple);
 }
 
 .cta-box--contact {
@@ -113,46 +106,5 @@
   font-weight: 800;
   text-decoration: none;
   font-size: var(--size-base);
-  color: var(--color-dark-blue-darkable);
-}
-
-.oss-intro-parragraph {
-  text-align: center;
-  margin: var(--space-quadruple) var(--space-quadruple) var(--space-double) var(--space-quadruple);
-}
-
-.oss-projects-list {
-  display: flex;
-  flex-flow: row wrap;
-  margin-bottom: var(--space-quadruple);
-}
-
-.oss-project {
-  width: 50%;
-  box-sizing: border-box;
-  padding-right: var(--space-double);
-}
-
-.oss-project--title {
-  text-decoration: none;
-}
-
-.oss-project--github-link {
-  color: var(--body-color);
-  font-family: var(--font-sans-serif);
-  font-size: var(--size-med-lg);
-  text-decoration: none;
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-}
-
-.oss-project--stars-label {
-  color: var(--body-color-faded);
-  font-size: var(--size-base);
-  margin-left: var(--space-single);
-}
-
-.oss-project--stars-label > .svg-inline--fa {
-  margin-right: var(--space-half);
+  color: var(--color-dark-blue);
 }
