--- a/src/pages/about/index.css
+++ b/src/pages/about/index.css
@@ -101,10 +101,55 @@
   padding: 0 var(--space-triple);
 }
 
+.cta-box--body > p {
+  font-family: var(--font-sans-serif);
+}
+
 .cta-box--contact {
   font-family: var(--font-sans-serif);
   font-weight: 800;
   text-decoration: none;
   font-size: var(--size-base);
   color: var(--color-dark-blue);
+}
+
+.oss-intro-parragraph {
+  text-align: center;
+  margin: var(--space-quadruple) var(--space-quadruple) var(--space-double) var(--space-quadruple);
+}
+
+.oss-projects-list {
+  display: flex;
+  flex-flow: row wrap;
+  margin-bottom: var(--space-quadruple);
+}
+
+.oss-project {
+  width: 50%;
+  box-sizing: border-box;
+  padding-right: var(--space-double);
+}
+
+.oss-project--title {
+  text-decoration: none;
+}
+
+.oss-project--github-link {
+  color: var(--body-color);
+  font-family: var(--font-sans-serif);
+  font-size: var(--size-med-lg);
+  text-decoration: none;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
+
+.oss-project--stars-label {
+  color: var(--body-color-faded);
+  font-size: var(--size-base);
+  margin-left: var(--space-single);
+}
+
+.oss-project--stars-label > .svg-inline--fa {
+  margin-right: var(--space-half);
 }
