--- a/src/components/_variables.css
+++ b/src/components/_variables.css
@@ -7,6 +7,7 @@
   --color-pink: #F74D7B;
   --color-light-blue: #26ABE8;
   --color-dark-blue: #14315D;
+  --color-dark-blue-darkable: #14315D;
   --link-color: var(--color-light-blue);
   --button-color: var(--color-pink);
 
@@ -16,6 +17,8 @@
   --body-color-faded: #888;
   --logo-wordmark-color: var(--color-dark-blue);
 
+  --rgba-light-blue: 38, 171, 232;
+
   /* Spacing  */
   --space-single: 1rem;
   --space-half: calc(var(--space-single) * 0.5);
@@ -24,7 +27,7 @@
   --space-triple: calc(var(--space-single) * 3);
   --space-quadruple: calc(var(--space-single) * 4);
 
-  --space-single-vw: 10vw;
+  --space-single-vw: 5vw;
   --space-half-vw: calc(var(--space-single-vw) * 0.5);
   --space-one-half-vw: calc(var(--space-single-vw) * 1.5);
   --space-double-vw: calc(var(--space-single-vw) * 2);
@@ -70,6 +73,7 @@
 }
 
 /* Break Points */
+@custom-media --up-small (min-width: 430px);
 @custom-media --medium-up (min-width: 768px);
 @custom-media --large-up (min-width: 1024px);
 @custom-media --xl-up (min-width: 1440px);
@@ -91,8 +95,9 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --body-bg: #1e1e1e;
-    --body-color: #fff;
+    --body-color: #fafafa;
     --body-color-faded: #aaa;
     --logo-wordmark-color: #fff;
+    --color-dark-blue-darkable: #59d6fb;
   }
 }
