--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,7 +2,7 @@
 
 /* Local Variables */
 $logo-height: 2.25rem;
-$navbar-padding: var(--space-single);
+$navbar-padding: var(--space-double);
 /* used for dropdown height calculation */
 $navbar-height: calc($logo-height + ($navbar-padding * 2));
 
@@ -11,12 +11,12 @@ $navbar-height: calc($logo-height + ($navbar-padding * 2));
   align-items: center;
   padding: $navbar-padding var(--space-half-vw);
   z-index: var(--z-top);
-  margin: 0 auto;
+  margin: var(--space-half-vw) auto 0 auto;
   max-width: 80rem;
+  justify-content: center;
 }
 
 .navbar-logo {
-  margin-right: auto;
   height: $logo-height;
 
   svg {
@@ -53,7 +53,6 @@ $navbar-height: calc($logo-height + ($navbar-padding * 2));
     padding: 0;
     position: relative;
     top: auto;
-    margin-left: auto;
     height: auto;
     width: auto;
     box-shadow: none;
@@ -80,8 +79,15 @@ $navbar-height: calc($logo-height + ($navbar-padding * 2));
 
     @media (--medium-up) {
       margin-bottom: 0;
-      margin-left: var(--space-one-half);
       opacity: 1;
+      font-size: 0.8rem;
+      &:before {
+        content: '•';
+        line-height: 1rem;
+        display: inline-block;
+        color: gray;
+        margin: 0 var(--space-double);
+      }
     }
   }
 
@@ -99,6 +105,11 @@ $navbar-height: calc($logo-height + ($navbar-padding * 2));
 
     @media (--medium-up) {
       font-size: var(--size-med-sm);
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+    &[aria-current] {
+      color: var(--color-pink);
     }
   }
 }
