--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -13,3 +13,30 @@
 .blog-post-content li {
   margin-bottom: var(--space-single);
 }
+
+.header-link {
+  text-decoration: none;
+  color: var(--body-color);
+  display: inline-block;
+}
+
+.header-link:hover:before,
+.header-link.not-h2:hover:before {
+    position: absolute;
+    transform: translateX(-100%);
+    height: 24px;
+    width: 24px;
+    content: '';
+    background-size: 24px 24px;
+    background-image: url(../img/clients/dell-logo.svg);
+}
+
+.header-link.not-h2:before{
+    position: absolute;
+    transform: translateX(-100%);
+    height: 24px;
+    width: 24px;
+    content: '';
+    background-size: 24px 24px;
+    background-image: url(../img/logo-no-text.svg);
+}
