--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -14,29 +14,35 @@
   margin-bottom: var(--space-single);
 }
 
-.header-link {
+.markdown-heading-link {
   text-decoration: none;
   color: var(--body-color);
   display: inline-block;
 }
 
-.header-link:hover:before,
-.header-link.not-h2:hover:before {
-    position: absolute;
-    transform: translateX(-100%);
-    height: 24px;
-    width: 24px;
-    content: '';
-    background-size: 24px 24px;
-    background-image: url(../img/clients/dell-logo.svg);
+.markdown-heading-link:before {
+  content: '';
+  background-image: url(../img/custom-icons/link-icon.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  transform: translate(-180%, 70%);
+  opacity: 0.3;
 }
 
-.header-link.not-h2:before{
-    position: absolute;
-    transform: translateX(-100%);
-    height: 24px;
-    width: 24px;
-    content: '';
-    background-size: 24px 24px;
-    background-image: url(../img/logo-no-text.svg);
+@media (prefers-color-scheme: dark) {
+  .markdown-heading-link:before {
+    background-image: url(../img/custom-icons/link-icon-white.svg);;
+  }
+}
+
+.markdown-heading-link.markdown-heading-link__lower-heading:before {
+  opacity: 0;
+  transform: translate(-180%, 40%);
+}
+
+.markdown-heading-link:hover:before {
+  opacity: 0.7;
 }
