--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -48,6 +48,7 @@
 .blog-post-content > p a, .blog-post-content li a {
   text-decoration: none;
   color: var(--body-color);
+  padding-bottom: 2px;
   border-bottom: 1px solid var(--body-color-faded);
   &:hover {
     border-color: var(--color-light-blue)
